--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<a href="test.html">Link Label</a>
+<a href="dev/test.html">Link Label</a>
 </body>
 </html>
