--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<style type="text/css">
+a { text-decoration:none }
+</style>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
